--- a/Views/Login/Cadastro.cshtml
+++ b/Views/Login/Cadastro.cshtml
@@ -2,17 +2,22 @@
     ViewData["Title"] = "Cadastro";
 }
 
-<h2>Cadastro</h2>
+<h2>Cadastro de Usuário</h2>
 
 <form method="post" asp-action="Cadastro">
     <label>Usuário:</label>
-    <input type="text" name="username" />
+    <input type="text" name="username" required />
     <br />
+
     <label>Email:</label>
-    <input type="text" name="email" />
+    <input type="email" name="email" required />
     <br />
+
     <label>Senha:</label>
-    <input type="password" name="senha" />
+    <input type="password" name="senha" required />
     <br />
+
     <button type="submit">Cadastrar</button>
 </form>
+
+<p>Já tem conta? <a asp-controller="Login" asp-action="Index">Faça login aqui</a></p>
