--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -6,11 +6,13 @@
 
 <form method="post" asp-action="Index">
     <label>Email:</label>
-    <input type="text" name="email" />
+    <input type="text" name="email" required />
     <br />
+
     <label>Senha:</label>
-    <input type="password" name="senha" />
+    <input type="password" name="senha" required />
     <br />
+
     <button type="submit">Entrar</button>
 </form>
 
@@ -18,3 +20,5 @@
 {
     <p style="color:red">@ViewBag.Erro</p>
 }
+
+<p>Ainda não tem conta? <a asp-controller="Login" asp-action="Cadastro">Cadastre-se aqui</a></p>
